# bitcoinos-journey

./: .env  .gitignore  Cargo.toml  README.md  config.txt  config.yml
electrs/: README.md
src/: lib.rs  main.rs  rgb20_helper.rs
