
[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.dependencies]
amplify = "4.6.0"
strict_encoding = "2.7.0-beta.1"
strict_types = "2.7.0-beta.1"
aluvm = "0.11.0-beta.4"
bp-core = "0.11.0-beta.4"
rgb-std = { version = "0.11.0-beta.4", features = ["serde", "fs"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"